[gd_scene load_steps=7 format=3 uid="uid://cm3j3gh2lamwj"]

[ext_resource type="Script" path="res://scenes/Levels.gd" id="1_nxsxa"]
[ext_resource type="Texture2D" uid="uid://bi1qnnmpjxy1p" path="res://images/Dirt_01.png" id="2_enjh5"]
[ext_resource type="Theme" uid="uid://chs40oebbe8ed" path="res://fonts/font_theme.tres" id="3_qpkr3"]
[ext_resource type="FontFile" uid="uid://do7xr3jv0ldym" path="res://fonts/RandomFont3.ttf" id="4_sv2bv"]
[ext_resource type="Theme" uid="uid://cp0c0m5ifst5q" path="res://BUTTON.tres" id="5_4ly78"]

[sub_resource type="LabelSettings" id="LabelSettings_msdy3"]
font = ExtResource("4_sv2bv")
font_size = 50
font_color = Color(0.160869, 0.0616329, 1.8049e-08, 1)
outline_size = 2
outline_color = Color(0.160784, 0.0627451, 0, 1)

[node name="Levels" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nxsxa")

[node name="Dirt01" type="Sprite2D" parent="."]
show_behind_parent = true
position = Vector2(326.938, 323.5)
scale = Vector2(1.2771, 1.274)
texture = ExtResource("2_enjh5")

[node name="Dirt02" type="Sprite2D" parent="."]
show_behind_parent = true
position = Vector2(977, 326)
scale = Vector2(1.271, 1.271)
texture = ExtResource("2_enjh5")

[node name="Label_title" type="Label" parent="."]
layout_mode = 0
offset_left = 403.0
offset_top = 259.0
offset_right = 747.0
offset_bottom = 311.0
theme = ExtResource("3_qpkr3")
text = "LEVELS"
label_settings = SubResource("LabelSettings_msdy3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button_level1" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.0
offset_top = 50.0
offset_right = 126.0
offset_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_4ly78")
text = "LEVEL 1"

[node name="Button_level2" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.0
offset_top = 119.0
offset_right = 126.0
offset_bottom = 179.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_4ly78")
text = "LEVEL 2"

[node name="Button_back_3" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.0
offset_top = 187.0
offset_right = 126.0
offset_bottom = 247.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_4ly78")
text = "BACK"

[connection signal="pressed" from="Button_level1" to="." method="_on_button_level_1_pressed"]
[connection signal="pressed" from="Button_level2" to="." method="_on_button_level_2_pressed"]
[connection signal="pressed" from="Button_back_3" to="." method="_on_button_back_3_pressed"]
